syntax = "proto3";
package spire.dummy;
option go_package = "dummy";

import public "github.com/spiffe/spire/proto/common/common.proto";
import public "github.com/spiffe/spire/proto/common/plugin/plugin.proto";

message NoStreamRequest {
	int64 value = 1;
}

message NoStreamResponse {
	int64 value = 1;
}

message ClientStreamRequest {
	int64 value = 1;
}

message ClientStreamResponse {
	int64 value = 1;
}

message ServerStreamRequest {
	int64 value = 1;
}

message ServerStreamResponse {
	int64 value = 1;
}

message BothStreamRequest {
	int64 value = 1;
}

message BothStreamResponse {
	int64 value = 1;
}

service Dummy {
	// No streaming
    rpc NoStream(NoStreamRequest) returns (NoStreamResponse);

	// Stream things to
	rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse);

	// Stream things back
	rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse);

	rpc BothStream(stream BothStreamRequest) returns (stream BothStreamResponse);

	// Plugin Methods
    rpc Configure(spire.common.plugin.ConfigureRequest) returns (spire.common.plugin.ConfigureResponse);
    rpc GetPluginInfo(spire.common.plugin.GetPluginInfoRequest) returns (spire.common.plugin.GetPluginInfoResponse);
}
